# todo-app-clean-arch-rust

./: Cargo.toml  README.md
src/: main.rs
src/adapters/repository/todo/: mem.rs  mod.rs  mongodb.rs
src/application/todo/: dto.rs  mod.rs
src/domain/todo/: error.rs  mod.rs
src/infrastructure/delivery/http/axum/: mod.rs  todo.rs
