[package]
name = "todo-app-clean-arch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
axum = "0.6.9"
chrono = { version = "0.4.23", features = ["serde"] }
dashmap = "5.4.0"
futures-util = "0.3.26"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
